@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
+<xs:schema targetNamespace="http://NS.com/Common" 
+           xmlns:xs="http://www.w3.org/2001/XMLSchema"
+           elementFormDefault="qualified"> 
+  <xs:complexType name="AddressType">
+    <xs:sequence>
+      <xs:element name="Line1" type="xs:string" />
+      <xs:element name="Line2" type="xs:string" />
+    </xs:sequence>
+  </xs:complexType>
+ 
+</xs:schema>
